[project]
name = "alpine-downloader"
version = "0.1.0"
description = "Simple link parser and downloader for alpine linux package repository."
readme = "README.md"
authors = [
    { name = "Dolomirr", email = "dolomirr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.5",
    "niquests>=3.15.2",
]

[project.scripts]
alpine-downloader = "alpine_downloader:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

